a few more z-index and positioning fixes

--- a/source/stylesheets/features/disrupt.scss
+++ b/source/stylesheets/features/disrupt.scss
@@ -100,7 +100,7 @@ $gridTop: 0;
       &:before {
         content: " ";
         position: absolute;
-        z-index: 500000;
+        z-index: 999;
         top: 2px;
         left: 2px;
         right: 2px;
@@ -341,7 +341,7 @@ $gridTop: 0;
   top: 50px;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 999;
   background-color: rgba(3,150,170,0.95);
   font-family: "adobe-jenson-pro", serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.21);
@@ -996,7 +996,7 @@ article {
   bottom: 0;
   width: 100%;
   height: 70px;
-  z-index: 50000;
+  z-index: 999;
   background-color: rgba(255,255,255,0.5);
   opacity: 0;
   pointer-events: none;
